# zoxel

./: .gitattributes  .gitignore  Android.mk  CMakeLists.txt  LICENSE  License  MakeDev  MakeLinuxDev  MakeWeb  MakeWebDev  Makefile  Makefile.macos  Makefile.mingw  MakefileDev  MakefileToWindows  MakefileWindows  README.md  about.md  build.md  build.sh  buildrun.sh  compute_simpler  documents.code-workspace  index.html  makefile  play-open-zoxel.desktop  readme.md  run.sh  test.sh  test_opengl  todo.md  zoxel  zoxel-dev  zoxel-dev.x86  zoxel.data  zoxel.html  zoxel.js  zoxel.wasm  zoxel.worker.js  zoxel.x86
Bash/: build-run-web-dev.sh  build-run-web.sh  build.sh  buildrun.sh  linux-build-run-dev.sh  linux-build-run.sh  linux-dev-valgrind-run.sh  linux-run.sh  run-web.sh  run.sh
Documents/: build-notes
Shaders/: BasicRender2D.frag  BasicRender2D.vert
Source/: main.c
Tests/: test_bulk_spawn.c  test_ecs_get_mut.c
automation/: build-run-web.sh  build-web.sh  update-emcc.sh
bash/: build-android-test.sh  build-android.sh  build-run-web-dev.sh  build-run-web.sh  build-web.sh  install_application.sh  linux-build-run-dev.sh  linux-build-run.sh  linux-build.sh  linux-dev-valgrind-run.sh  linux-run.sh  linux-valgrind-run.sh  play-open-zoxel.desktop  run-web.sh  zoxel-t.desktop  zoxel.desktop  zoxel_develop.sh
bash/android/app/jni/: Application.mk  CMakeLists.txt
bash/android/app/jni/src/: Android.mk
doc/: about.md  gdd.md  help.md  todo.md
docs/: 2024_todo.md  2024_todo.txt  2025_todo.md  _todo_2025.md  build.md  build_guide.md  cleanup.md  done_2024.md  todo.md  (+11 more)
(+4769 files in other folders)
